tests/fixtures/invalid/pow_int_float_bool.py
# Cannot call pow() with Int, Float, Bool
x = pow(1, 1.0, True)
